<resources>
    <string name="app_name">OfCourses</string>
    <string name="action_settings">Paramètres</string>
    <string name="prompt_login">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s\'enregistrer</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Adresse email invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="title_activity_liste_eleve">Liste des élèves</string>
    <string name="title_activity_main">OfCourses</string>
    <string name="section_format">null</string>
    <string name="add_mark_popup_title">Ajouter une note</string>
    <string name="add_appreciation_popup_title">Ajouter une appréciation à un élève</string>
    <string name="ok">Valider</string>
    <string name="modifier">Modifier</string>
    <string name="addAppreciation">Ajouter Appréciation</string>
    <string name="addMarks">Ajouter Note</string>
    <string name="save">Sauvegarder</string>
    <string name="tp">TP : </string>
    <string name="subject">Matière : </string>
    <string name="listeOfStudents">Liste des élèves</string>
    <string name="listeOfGroups">Liste des groupes</string>
    <string name="chooseASubject">Choisissez une matière</string>
    <string name="chooseAGroup">Choisissez un groupe</string>
    <string name="chooseAStudent">Selectionner un étudiant</string>
    <string name="participation">Participation :</string>
    <string name="punctuality">Ponctualité :</string>
    <string name="absence">Absence :</string>
    <string name="concentration">Concentration :</string>
    <string name="workBack">Travail Rendu : </string>
    <string name="commentary">Commentaire : </string>
    <string name="finalMark">Note Finale : </string>
    <string name="next">Suivant</string>
    <string name="title_activity_liste_groupe">Liste des groupes</string>
    <string name="categories_evaluation">Catégories d\'évaluation :</string>
    <string name="textView">Accessibilité</string>
    <string name="textView2">Langue actuelle :</string>
    <string name="textView3">Langue :</string>
    <string name="textView4">Design</string>
    <string name="textView5">Police actuelle : </string>
    <string name="textView6">Couleur :</string>
    <string name="textView7">Notifications</string>
    <string name="textView8">Français</string>
    <string name="textView9">Police actuelle :</string>
    <string name="btnQuit">Sauver et Quitter</string>
    <string name="checkBox">Vert</string>
    <string name="checkBox2">Orange</string>
    <string name="checkBox3">Bleu</string>
    <string name="checkBox4">Activer les notifications</string>
    <string name="lblJeudi">Jeudi</string>
    <string name="lblLundi">Lundi</string>
    <string name="lblMardi">Mardi</string>
    <string name="lblMercredi">Mercredi</string>
    <string name="lblVendredi">Vendredi</string>
    <string name="hello_world">null</string>
    <string name="scheduler">Emplois du temps</string>
    <string name="Groupe4CIUTOrsay">Groupe 4C : IUT Orsay</string>
    <string name="welcome">Welcome</string>
</resources>
