<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="iutorsaytpc.ofcourses.Options_Main"
    tools:showIn="@layout/activity_options__main">

    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="16.0px"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:enabled="true"
                        android:textColor="#ffffffff"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btnQuit"
                        android:background="#ffaccb12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnQuit" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" android:id="@+id/textView"
                    android:paddingBottom="10.0px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView" />

            </LinearLayout>

            <View
                android:background="#ff000000"
                android:layout_width="fill_parent"
                android:layout_height="10.0px" />

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="16.0px"
                android:paddingBottom="16.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView2" />

                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:id="@+id/textView8"
                    android:paddingLeft="16.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView8" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="10.0px"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView3" />

                <Spinner
                    android:id="@+id/spinnerLangue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="20.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" android:id="@+id/textView4"
                    android:paddingBottom="10.0px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView4" />

            </LinearLayout>

            <View
                android:background="#ff000000"
                android:layout_width="fill_parent"
                android:layout_height="10.0px" />

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="16.0px"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@+id/textView5"
                        android:paddingTop="5.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView5" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingBottom="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:textAppearance="?android:textAppearanceMedium"
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Default" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinnerPolice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView6" />
                    <CheckBox
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/checkBox"
                        android:layout_width="80.0dip"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/checkBox"
                        android:buttonTint="#98AC3C" />

                    <CheckBox
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/checkBox2"
                        android:layout_width="80.0dip"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/checkBox2"
                        android:buttonTint="#FF6E00" />

                    <CheckBox
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/checkBox3"
                        android:layout_width="80.0dip"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/checkBox3"
                        android:buttonTint="#0000FF" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:id="@+id/textView7"
                    android:paddingBottom="10.0px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView7" />

            </LinearLayout>

            <View
                android:background="#ff000000"
                android:layout_width="fill_parent"
                android:layout_height="10.0px" />

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="16.0px"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/checkBox4" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
