<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cyril.listegroupeprojet.listeEleve"
    tools:showIn="@layout/activity_liste_eleve">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewTP" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subject" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewMatiere" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/addMarks"
                    android:id="@+id/addNote"
                    android:background="@drawable/greybutton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:maxWidth="100dp"
                    android:textSize="10dp"
                    android:textColor="#ffffff">
                </Button>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/addAppreciation"
                    android:id="@+id/addAppreciation"
                    android:layout_gravity="right"
                    android:background="@drawable/greybutton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:maxWidth="100dp"
                    android:textSize="10dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="10dp">
                </Button>
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tableEleve"
                    >

                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/modifier"
                    android:id="@+id/modifierButton"
                    android:background="@drawable/greenbutton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_marginLeft="5dp"
                    android:maxWidth="100dp"
                    android:textSize="10dp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal">

                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/save"
                    android:id="@+id/sauvegarderButton"
                    android:background="@drawable/greenbutton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_marginLeft="5dp"
                    android:maxWidth="100dp"
                    android:textSize="10dp"
                    android:textColor="#ffffff">

                </Button>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
